切换到现代Java语法，移除自动更新模块